--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "enzyme": "^2.5.1",
     "express": "^4.14.0",
     "firebase": "^3.6.1",
+    "material-ui": "^0.16.4",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
