--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.14.0",
     "firebase": "^3.6.1",
     "material-ui": "^0.16.4",
+    "node-soundcloud": "0.0.6",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
@@ -50,6 +51,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
