--- a/package.json
+++ b/package.json
@@ -51,13 +51,15 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-soundplayer": "^0.3.6",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.24.6",
     "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "soundcloud-audio": "^1.0.4"
   },
   "devDependencies": {
     "babel": "^6.5.2",
