--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test-watch": "check-node-version --node '>= 6.7.0' && bin/setup && mocha --compilers js:babel-register --watch app/**/*.test.js app/**/*.test.jsx db/**/*.test.js server/**/*.test.js",
     "build": "check-node-version --node '>= 6.7.0' && bin/setup && webpack",
     "build-watch": "check-node-version --node '>= 6.7.0' && bin/setup && webpack -w",
-    "start": "check-node-version --node '>= 6.7.0' && bin/setup && webpack && node server/start.js",
+    "start": "check-node-version --node '>= 6.7.0' && bin/setup && webpack && nodemon server/start.js",
     "seed": "node db/seed.js"
   },
   "repository": {
@@ -31,6 +31,11 @@
   "homepage": "https://github.com/christophermanahan/wejay#readme",
   "dependencies": {
     "axios": "^0.15.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
@@ -44,6 +49,7 @@
     "firebase-admin": "^4.0.2",
     "material-ui": "^0.16.4",
     "node-soundcloud": "0.0.6",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
@@ -64,13 +70,8 @@
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "soundcloud-audio": "^1.0.4",
-    "webpack": "^1.13.3",
     "volleyball": "^1.4.1",
-    "babel": "^6.5.2",
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "webpack": "^1.13.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
