--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "chai-enzyme": "^0.5.2",
     "chalk": "^1.1.3",
     "check-node-version": "^1.1.2",
+    "classnames": "^2.2.5",
     "cookie-session": "^2.0.0-alpha.1",
+    "css-loader": "^0.26.0",
     "enzyme": "^2.5.1",
     "express": "^4.14.0",
     "firebase": "^3.6.1",
     "firebase-admin": "^4.0.2",
+    "flexboxgrid": "^6.3.1",
     "material-ui": "^0.16.4",
     "node-soundcloud": "0.0.6",
     "nodemon": "^1.11.0",
@@ -59,6 +62,7 @@
     "pg-native": "^1.10.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-flexbox-grid": "^0.10.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-soundplayer": "^0.3.6",
@@ -75,7 +79,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "css-loader": "^0.26.0",
     "mocha": "^3.1.2",
+    "npm": "^4.0.2",
+    "style-loader": "^0.13.1",
     "supertest": "^2.0.1",
     "supertest-as-promised": "^4.0.1"
   }
