--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "social dj web app",
   "main": "index.js",
   "scripts": {
+    "build-css": "node-sass  app/assets/main/ -o public/stylesheets",
     "test": "check-node-version --node '>= 6.7.0' && bin/setup && mocha --compilers js:babel-register app/**/*.test.js app/**/*.test.jsx db/**/*.test.js server/**/*.test.js",
     "test-watch": "check-node-version --node '>= 6.7.0' && bin/setup && mocha --compilers js:babel-register --watch app/**/*.test.js app/**/*.test.jsx db/**/*.test.js server/**/*.test.js",
     "build": "check-node-version --node '>= 6.7.0' && bin/setup && webpack",
@@ -47,6 +48,7 @@
     "css-loader": "^0.26.0",
     "enzyme": "^2.5.1",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "firebase": "^3.6.1",
     "firebase-admin": "^4.0.2",
     "flexboxgrid": "^6.3.1",
@@ -78,10 +80,14 @@
     "webpack": "^1.13.3"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.16.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
     "mocha": "^3.1.2",
+    "node-sass": "^3.13.0",
     "npm": "^4.0.2",
+    "postcss-loader": "^1.1.1",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "supertest": "^2.0.1",
     "supertest-as-promised": "^4.0.1"
