finished grid config and styled login for mobile viewport

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ public/bundle.js.map
 bones_orig_backup
 npm-debug.log
 /yarn.lock
-/bundle.css*
+public/stylesheets/bundle.css
+public/stylesheets/bundle.css.map
