--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
@@ -52,7 +53,9 @@
     "firebase": "^3.6.1",
     "firebase-admin": "^4.0.2",
     "flexboxgrid": "^6.3.1",
+    "human-readable-ids": "^1.0.1",
     "material-ui": "^0.16.4",
+    "node-sass": "^3.13.0",
     "node-soundcloud": "0.0.6",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
@@ -62,6 +65,7 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.0",
     "pg-native": "^1.10.0",
+    "postcss-loader": "^1.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-flexbox-grid": "^0.10.2",
@@ -72,18 +76,14 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.2",
     "sequelize": "^3.24.6",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "soundcloud-audio": "^1.0.4",
-    "volleyball": "^1.4.1",
-    "webpack": "^1.13.3",
-    "css-loader": "^0.26.0",
-    "babel-polyfill": "^6.16.0",
-    "postcss-loader": "^1.1.1",
-    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "node-sass": "^3.13.0"
+    "volleyball": "^1.4.1",
+    "webpack": "^1.13.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
