--- a/package.json
+++ b/package.json
@@ -81,7 +81,14 @@
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "soundcloud-audio": "^1.0.4",
+    "volleyball": "^1.4.1",
+    "webpack": "^1.13.3",
+    "css-loader": "^0.26.0",
+    "babel-polyfill": "^6.16.0",
+    "postcss-loader": "^1.1.1",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "node-sass": "^3.13.0",
     "volleyball": "^1.4.1",
     "webpack": "^1.13.3"
   },
