--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "webpack": "^1.13.3"
   },
   "devDependencies": {
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "enzyme": "^2.5.1",
     "mocha": "^3.1.2",
