--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-css": "node-sass  app/assets/main/ -o public/stylesheets",
     "test": "check-node-version --node '>= 6.7.0' && bin/setup && mocha --compilers js:babel-register --require ignore-styles tests/**/*.spec.jsx tests/**/*.spec.js",
-    "test-watch": "check-node-version --node '>= 6.7.0' && bin/setup && mocha --compilers js:babel-register --watch app/**/*.test.js app/**/*.test.jsx db/**/*.test.js server/**/*.test.js",
+    "test-watch": "check-node-version --node '>= 6.7.0' && bin/setup && mocha --compilers js:babel-register --watch --require ignore-styles tests/**/*.spec.jsx tests/**/*.spec.js",
     "build": "check-node-version --node '>= 6.7.0' && bin/setup && webpack",
     "build-watch": "check-node-version --node '>= 6.7.0' && bin/setup && webpack -w",
     "start": "check-node-version --node '>= 6.7.0' && bin/setup && webpack && node-sass  app/assets/main/ -o public/stylesheets && nodemon server/start.js",
@@ -41,7 +41,6 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "body-parser": "^1.15.2",
-    "chai-enzyme": "^0.5.2",
     "chalk": "^1.1.3",
     "check-node-version": "^1.1.2",
     "classnames": "^2.2.5",
@@ -76,7 +75,9 @@
   "devDependencies": {
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.2",
     "enzyme": "^2.5.1",
+    "firebase-server": "^0.7.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.1.2",
     "npm": "^4.0.2",
