--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-flexbox-grid": "^0.10.2",
+    "react-flip-move": "^2.7.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-soundplayer": "^0.3.6",
